# wal-fact-checker

./: Dockerfile  GEMINI.md  Makefile  README.md  agent.py  docker-compose.yml  pyproject.toml
.cursor/rules/: programming-guide.mdc
.github/workflows/: cloud-run-deploy.yml
app/: __init__.py  a2a.py  server.py
app/agents/: fact_check_orchestrator.py
app/agents/analysis/: __init__.py  claim_structuring_agent.py  gap_identification_agent.py
app/agents/research/: __init__.py  research_orchestrator_agent.py  single_question_research_agent.py
app/core/: models.py  settings.py  tools.py
app/observability/: langfuse_tracing.py
app/utils/: gsm.py
deployment/terraform/: github.tf  service.tf  storage.tf  variables.tf
deployment/terraform/dev/: service.tf  variables.tf
deployment/terraform/dev/vars/: env.tfvars
deployment/terraform/vars/: env.tfvars
src/wal_fact_checker/: __init__.py  a2a.py  agent.py  app.py  server.py
src/wal_fact_checker/.adk/: session.db
src/wal_fact_checker/a2a/: __init__.py  app.py  executor.py
src/wal_fact_checker/agents/: __init__.py  fact_check_orchestrator.py
src/wal_fact_checker/agents/analysis/: claim_structuring_agent.py  gap_identification_agent.py
src/wal_fact_checker/agents/research/: __init__.py  research_orchestrator_agent.py  single_question_research_agent.py
src/wal_fact_checker/agents/synthesis/: __init__.py  adversarial_critique_agent.py  evidence_adjudicator_agent.py  evidence_synthesizer_agent.py  report_transformation_agent.py
src/wal_fact_checker/core/: __init__.py  logging_config.py  models.py  settings.py  tools.py
src/wal_fact_checker/observability/: langfuse_tracing.py
src/wal_fact_checker/utils/: __init__.py  callbacks.py  embedding_service.py  tracing.py  typing.py
tests/: __init__.py
